--- a/src/app/recipes/recipe-details/recipe-details.component.html
+++ b/src/app/recipes/recipe-details/recipe-details.component.html
@@ -1,6 +1,6 @@
 <div class="row">
-  <div class="col-md-12">
-    <img [src]="selectedRecipeDeails.imagePath" [alt]="selectedRecipeDeails.name" style="max-height: 150px;"
+  <div class="col-md-12 text-center">
+    <img [src]="selectedRecipeDeails.imagePath" [alt]="selectedRecipeDeails.name" style="max-height: 400px;"
       class="img-responsive">
   </div>
 </div>
@@ -15,14 +15,16 @@
 
 <div class="row">
   <div class="col-md-12">
-    <button type="button" class="btn btn-primary dropdown-toggle">
-      Manage Recipe <span class="caret"></span>
-    </button>
-    <ul class="dropdown-menu">
-      <li><a href="#">To Shopping List</a></li>
-      <li><a href="#">Edit Recipe</a></li>
-      <li><a href="#">Delete Recipe</a></li>
-    </ul>
+    <div class="btn-group" appDropdown>
+      <button type="button" class="btn btn-primary dropdown-toggle">
+        Manage Recipe <span class="caret"></span>
+      </button>
+      <ul class="dropdown-menu">
+        <li><a href="#">To Shopping List</a></li>
+        <li><a href="#">Edit Recipe</a></li>
+        <li><a href="#">Delete Recipe</a></li>
+      </ul>
+    </div>
   </div>
 </div>
 
