Adding ingredients of selected recipe to shopping list.

--- a/src/app/shopping-list/shopping-list-edit/shopping-list-edit.component.html
+++ b/src/app/shopping-list/shopping-list-edit/shopping-list-edit.component.html
@@ -11,7 +11,7 @@
       </div>
       <div class="row">
         <div class="col-sm-12 form-group">
-          <button type="submit" class="btn btn-success" (click)="addItem()"> Add </button>
+          <button type="button" class="btn btn-success" (click)="addItem()"> Add </button>
           <button type="button" class="btn btn-danger ml-1" (click)="onRemoveIngredient()"> Delete </button>
           <button type="button" class="btn btn-primary ml-1" (click)="clearInputs()"> Clear </button>
         </div>
