--- a/src/app/recipes/recipe-details/recipe-details.component.html
+++ b/src/app/recipes/recipe-details/recipe-details.component.html
@@ -20,7 +20,7 @@
         Manage Recipe <span class="caret"></span>
       </button>
       <ul class="dropdown-menu">
-        <li><a href="#">To Shopping List</a></li>
+        <li><a style="cursor: pointer;" (click)="addToShoppingList()">To Shopping List</a></li>
         <li><a href="#">Edit Recipe</a></li>
         <li><a href="#">Delete Recipe</a></li>
       </ul>
@@ -35,6 +35,9 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-    Ingredients
+    <label for="list-group">Ingredients:</label>
+    <ul class="list-group">
+      <li class="list-group-item" *ngFor="let ingredient of selectedRecipeDeails.ingredients">{{ingredient.name}}</li>
+    </ul>
   </div>
 </div>
