--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,10 +1,9 @@
 <div class="row">
   <div class="col-xs-10">
-    <app-shopping-list-edit (newIngredientAdded)="onNewIngredientAdded($event)" (removeIngredient)="
-      onRemoveIngredient($event)"></app-shopping-list-edit>
+    <app-shopping-list-edit></app-shopping-list-edit>
     <hr>
     <ul class="list-group">
-      <a class="list-group-item" style="cursor: pointer;" *ngFor="let ingredient of ingredients">{{ingredient.name}}
+      <a href="javascript:void(0);" class="list-group-item" style="cursor: pointer;" *ngFor="let ingredient of ingredients">{{ingredient.name}}
         ({{ingredient.amount}})</a>
     </ul>
   </div>
