--- a/src/app/recipes/recipe-details/recipe-details.component.html
+++ b/src/app/recipes/recipe-details/recipe-details.component.html
@@ -1,5 +1,6 @@
+<br>
 <div class="row">
-  <div class="col-md-12 text-center">
+  <div class="col-md-12">
     <img [src]="selectedRecipeDeails.imagePath" [alt]="selectedRecipeDeails.name" style="max-height: 400px;"
       class="img-responsive">
   </div>
