--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,12 +3,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <app-recipes *ngIf="loadSelectedFeature === 'recipe'"></app-recipes>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-12">
-      <app-shopping-list  *ngIf="loadSelectedFeature === 'shopping-list'"></app-shopping-list>
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
