--- a/src/app/recipes/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-item/recipe-item.component.html
@@ -1,4 +1,5 @@
-<a href="#" class="list-group-item clearfix" (click)="onSelected(recipe)">
+<a style="cursor: pointer; margin-bottom: 1px; margin-top: 1px;"
+   class="list-group-item clearfix mb-3" (click)="onSelected(recipe)">
   <div class="pull-left">
     <h4 class="list-group-item-heading">{{recipe.name}}</h4>
     <p class="list-group-item-text">{{recipe.description}}</p>
