--- a/src/app/shopping-list/shopping-list-edit/shopping-list-edit.component.html
+++ b/src/app/shopping-list/shopping-list-edit/shopping-list-edit.component.html
@@ -11,9 +11,12 @@
       </div>
 
       <div class="col-sm-12 form-group">
-        <button type="button" class="btn btn-success" (click)="addItem()"> Add </button>
-        <button type="button" class="btn btn-danger ml-1" (click)="onRemoveIngredient()"> Delete </button>
-        <button type="button" class="btn btn-primary ml-1" (click)="clearInputs()"> Clear </button>
+        <button type="button" class="btn btn-success" style=" margin-left: 3px; margin-right: 3px;" (click)="addItem()">
+          Add </button>
+        <button type="button" class="btn btn-danger ml-1" style=" margin-left: 3px; margin-right: 3px;"
+          (click)="onRemoveIngredient()"> Delete </button>
+        <button type="button" class="btn btn-primary ml-1" style=" margin-left: 3px; margin-right: 3px;"
+          (click)="clearInputs()"> Clear </button>
       </div>
 
     </form>
