Recipe - Edit & New Components created and routing added to it.

--- a/src/app/recipes/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-item/recipe-item.component.html
@@ -1,6 +1,6 @@
-<a style="cursor: pointer; margin-bottom: 3px; margin-top: 3px;"
-   class="list-group-item clearfix mb-3"
-   [routerLink]="[index]">
+
+<a style="cursor: pointer; margin-bottom: 3px; margin-top: 3px;" class="list-group-item clearfix mb-3"
+  [routerLink]="[index]" [routerLinkActive]="['active']">
   <div class="pull-left">
     <h4 class="list-group-item-heading">{{recipe.name}}</h4>
     <p class="list-group-item-text">{{recipe.description}}</p>
