--- a/src/app/shopping-list/shopping-list-edit/shopping-list-edit.component.html
+++ b/src/app/shopping-list/shopping-list-edit/shopping-list-edit.component.html
@@ -1,22 +1,20 @@
 <div class="row">
   <div class="col-xs-12">
-    <form>
+    <form (ngSubmit)="onSubmit(f)" #f="ngForm">
       <div class="col-sm-5 form-group">
         <label for="name">Name</label>
-        <input type="text" id="name" class="form-control" #nameInput>
+        <input type="text" id="name" class="form-control" name="name" ngModel required>
       </div>
       <div class="col-sm-2 form-group">
         <label for="amount">Amount</label>
-        <input type="number" id="amount" class="form-control" #amountInput>
+        <input type="number" id="amount" class="form-control" name="amount" ngModel required pattern="^[1-9]+[0-9]*$">
       </div>
 
       <div class="col-sm-12 form-group">
-        <button type="button" class="btn btn-success" style=" margin-left: 3px; margin-right: 3px;" (click)="addItem()">
-          Add </button>
-        <button type="button" class="btn btn-danger ml-1" style=" margin-left: 3px; margin-right: 3px;"
-          (click)="onRemoveIngredient()"> Delete </button>
-        <button type="button" class="btn btn-primary ml-1" style=" margin-left: 3px; margin-right: 3px;"
-          (click)="clearInputs()"> Clear </button>
+        <button type="submit" class="btn btn-success mx-3" [disabled]="!f.valid">{{ editMode ? 'Update' : 'Add'}}
+        </button>
+        <button type="button" class="btn btn-danger mx-3" (click)="onDeleteItem()" *ngIf="editMode"> Delete </button>
+        <button type="button" class="btn btn-primary mx-3" (click)="clearInputs(f)"> Clear </button>
       </div>
 
     </form>
