--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,10 +1,11 @@
 <div class="row">
   <div class="col-xs-10">
-    <!-- <app-shopping-list-edit></app-shopping-list-edit> -->
+    <app-shopping-list-edit></app-shopping-list-edit>
     <router-outlet></router-outlet>
     <hr>
     <ul class="list-group">
-      <a href="javascript:void(0);" class="list-group-item" style="cursor: pointer;" *ngFor="let ingredient of ingredients">{{ingredient.name}}
+      <a class="list-group-item" style="cursor: pointer;"
+        *ngFor="let ingredient of ingredients; let i = index" (click)="onEditIngredient(i)">{{ingredient.name}}
         ({{ingredient.amount}})</a>
     </ul>
   </div>
