--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,1 +1,55 @@
-<p>recipe-edit works!</p>
+<div class="row">
+  <div class="col-xs-12">
+    <form [formGroup]="recipeEditForm" (ngSubmit)="onEditFormSubmit()">
+
+      <div class="form-group">
+        <button class="btn btn-success mx-3" type="submit" [disabled]="!recipeEditForm.valid">Save</button>
+        <button class="btn btn-secondary mx-3" type="button" (click)="onCancel()">Cancel</button>
+      </div>
+      <hr>
+      <div class="form-group">
+        <label for="name">Name</label>
+        <input type="text" class="form-control" id="name" formControlName="name">
+      </div>
+
+      <div class="form-group">
+        <label for="imagePath">Image URL</label>
+        <input type="text" class="form-control" id="imagePath" formControlName="imagePath" #imagePath>
+      </div>
+      <div class="form-group">
+        <label for="preview" *ngIf="imagePath.value != ''">Image Preview</label>
+        <img [src]="imagePath.value" id="preview" class="img-responsive rounded">
+      </div>
+
+      <div class="form-group">
+        <label for="description">Description</label>
+        <textarea rows="6" class="form-control" id="description" formControlName="description"></textarea>
+      </div>
+
+      <div class="form-group">
+        <label for="ingredients" *ngIf="getListOfIngredients().length != 0">Ingredients</label>
+        <div formArrayName="ingredients">
+          <div class="row my-2" *ngFor="let ingredientCtrl of getListOfIngredients();let i = index;"
+            [formGroupName]="i">
+            <div class="col-xs-7 pl-0">
+              <input type="text" class="form-control" formControlName="name">
+            </div>
+            <div class="col-xs-3">
+              <input type="number" class="form-control" formControlName="amount">
+            </div>
+            <div class="col-xs-2">
+              <button class="btn btn-danger mx-2" type="button" (click)="onDeleteIngredient(i)"><i class="fa fa-trash-o"
+                  aria-hidden="true"></i></button>
+              <!-- <button class="btn btn-primary mx-2">+</button> -->
+            </div>
+          </div>
+        </div>
+        <hr>
+        <div>
+          <button class="btn btn-primary" type="button" (click)="onAddNewIngredient()">Add Ingredient</button>
+        </div>
+      </div>
+
+    </form>
+  </div>
+</div>
