--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,38 @@
 /* You can add global styles to this file, and also import other style files */
+.bg-light {
+    background-color: #f8f8f8;
+}
+
+.mx-1 {
+    margin-left: 1px;
+    margin-right: 1px;
+}
+
+.mx-2 {
+    margin-left: 2px;
+    margin-right: 2px;
+}
+
+.mx-3 {
+    margin-left: 3px;
+    margin-right: 3px;
+}
+
+.my-2 {
+    margin: 2px 0px !important;
+}
+
+.pl-0 {
+    padding-left: 0px !important;
+}
+
+.alignCenter {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 75%;
+}
+
+.rounded {
+    border-radius: 5px !important;
+}
