--- a/src/app/shopping-list/shopping-list-edit/shopping-list-edit.component.html
+++ b/src/app/shopping-list/shopping-list-edit/shopping-list-edit.component.html
@@ -1,22 +1,29 @@
 <div class="row">
   <div class="col-xs-12">
     <form (ngSubmit)="onSubmit(f)" #f="ngForm">
-      <div class="col-sm-5 form-group">
-        <label for="name">Name</label>
-        <input type="text" id="name" class="form-control" name="name" ngModel required>
+      <div class="form-group">
+        <div class="row">
+          <div class="col-xs-6">
+            <label for="name">Name</label>
+            <input type="text" id="name" class="form-control" name="name" ngModel required>
+          </div>
+          <div class="col-xs-2">
+            <label for="amount">Amount</label>
+            <input type="number" id="amount" class="form-control" name="amount" ngModel required
+              pattern="^[1-9]+[0-9]*$">
+          </div>
+          <div class="col-xs-4 text-center">
+            <label for="manageIngredients">Manage Ingredients</label>
+            <div id="manageIngredients">
+              <button type="submit" class="btn btn-success mx-3" [disabled]="!f.valid">{{ editMode ? 'Update' : 'Add'}}
+              </button>
+              <button type="button" class="btn btn-danger mx-3" (click)="onDeleteItem()" *ngIf="editMode"> Delete
+              </button>
+              <button type="button" class="btn btn-primary mx-3" (click)="clearInputs(f)"> Clear </button>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="col-sm-2 form-group">
-        <label for="amount">Amount</label>
-        <input type="number" id="amount" class="form-control" name="amount" ngModel required pattern="^[1-9]+[0-9]*$">
-      </div>
-
-      <div class="col-sm-12 form-group">
-        <button type="submit" class="btn btn-success mx-3" [disabled]="!f.valid">{{ editMode ? 'Update' : 'Add'}}
-        </button>
-        <button type="button" class="btn btn-danger mx-3" (click)="onDeleteItem()" *ngIf="editMode"> Delete </button>
-        <button type="button" class="btn btn-primary mx-3" (click)="clearInputs(f)"> Clear </button>
-      </div>
-
     </form>
   </div>
 </div>
