--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -8,10 +8,10 @@
     {{error}}
   </div>
 
-  <form class="card p-4 shadow-sm" [formGroup]="loginForm" (ngSubmit)="onFormSubmit()" *ngIf="!isLoading">
+  <form class="authForm" [formGroup]="loginForm" (ngSubmit)="onFormSubmit()" *ngIf="!isLoading">
     <!-- <form class="card p-4 shadow-sm"> -->
 
-    <div class="card border-0 mt-3 text-center">
+    <div class="text-center">
       <div class="card-title">
         <h3>Authentication</h3>
       </div>
@@ -33,7 +33,7 @@
     </div>
 
     <div class="form-group">
-      <label for="password">Password</label>
+      <label for="password">Password</label> <label class="forgot-password" (click)="forgotPassword()">Forgot Password?</label>
       <input type="password" id="password" formControlName="password" class="form-control" required minlength="6">
       <span class="help-block" *ngIf="!loginForm.get('password').valid && loginForm.get('password').touched">This
         field is required!</span>
