--- a/src/app/auth/auth.component.css
+++ b/src/app/auth/auth.component.css
@@ -1,21 +1,46 @@
 .container {
-    margin-top: 5%;
-    max-width: 375px;
-  }
-  
-  .alignCenter {
-    width: 100%;
-    max-width: 350px;
-    margin: auto;
-    height: auto;
-  }
-  
-  .help-block {
-    color: red;
-    font-size: 75%;
-  }
-  
-  input.ng-invalid.ng-touched,
-  select.ng-invalid.ng-touched {
-    border: 1px solid red;
-  }
+  margin-top: 5%;
+  max-width: 375px;
+}
+
+.alignCenter {
+  width: 100%;
+  max-width: 350px;
+  margin: auto;
+  height: auto;
+}
+
+.help-block {
+  color: red;
+  font-size: 75%;
+}
+
+input.ng-invalid.ng-touched,
+select.ng-invalid.ng-touched {
+  border: 1px solid red;
+}
+
+form {
+  padding: 50px;
+  /* border: 1px solid gray; */
+  border-radius: 5px;
+  background-color: white;
+  box-shadow: 0px 0px 5px 0px #9d9d9d;
+}
+
+.card-title {
+  margin-bottom: 50px;
+}
+
+.forgot-password {
+  font-size: 75%;
+  float: right;
+  color: dodgerblue;
+  cursor: pointer;
+  margin-bottom: 0px;
+  margin-top: 3px;
+}
+
+.float-right {
+  float: right;
+}
