--- a/src/app/header/app-header.component.html
+++ b/src/app/header/app-header.component.html
@@ -10,7 +10,7 @@
         <li routerLinkActive="active" *ngIf="!isAuthenticated"><a [routerLink]="['auth']">Authenticate</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li *ngIf="isAuthenticated"> <a style="cursor: pointer;">Logout</a> </li>
+        <li *ngIf="isAuthenticated"> <a style="cursor: pointer;" (click)="onLogout()">Logout</a> </li>
         <li class="dropdown" appDropdown *ngIf="isAuthenticated">
           <a style="cursor: pointer;" class="dropdown-toggle">Manage <span class="caret"></span></a>
           <ul class="dropdown-menu">
