--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,12 +1,16 @@
+<ng-container appPlaceHolder></ng-container>
+
 <div class="container">
 
   <div class="alignCenter text-center" *ngIf="isLoading">
     <app-loading-spinner></app-loading-spinner>
   </div>
 
-  <div class="alert alert-danger" *ngIf="error">
+  <!-- <div class="alert alert-danger" *ngIf="error">
     {{error}}
-  </div>
+  </div> -->
+
+  <!-- <app-alert-box [message]="error" *ngIf="error"></app-alert-box> -->
 
   <form class="authForm" [formGroup]="loginForm" (ngSubmit)="onFormSubmit()" *ngIf="!isLoading">
     <!-- <form class="card p-4 shadow-sm"> -->
@@ -33,7 +37,8 @@
     </div>
 
     <div class="form-group">
-      <label for="password">Password</label> <label class="forgot-password" (click)="forgotPassword()">Forgot Password?</label>
+      <label for="password">Password</label> <label class="forgot-password" (click)="forgotPassword()">Forgot
+        Password?</label>
       <input type="password" id="password" formControlName="password" class="form-control" required minlength="6">
       <span class="help-block" *ngIf="!loginForm.get('password').valid && loginForm.get('password').touched">This
         field is required!</span>
