Lazy Loading Added.

--- a/src/app/shopping-list/shopping-list-edit/shopping-list-edit.component.html
+++ b/src/app/shopping-list/shopping-list-edit/shopping-list-edit.component.html
@@ -19,7 +19,7 @@
               </button>
               <button type="button" class="btn btn-danger mx-3" (click)="onDeleteItem()" *ngIf="editMode"> Delete
               </button>
-              <button type="button" class="btn btn-primary mx-3" (click)="clearInputs(f)"> Clear </button>
+              <button type="button" class="btn btn-primary mx-3" (click)="clearInputs()"> Clear </button>
             </div>
           </div>
         </div>
