--- a/src/app/header/app-header.component.html
+++ b/src/app/header/app-header.component.html
@@ -1,9 +1,19 @@
 <nav class='navbar navbar-default'>
   <div class="container-fluid">
+
+
     <div class="navbar-header">
-      <a href="#" class="navbar-brand">Recipe Book</a>
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+        data-target="#bs-example-navbar-collapse-1" aria-expanded="false" (click)="expandNav()">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Recipe Book</a>
     </div>
-    <div class="collapse navbar-collapse">
+
+    <div class="collapse navbar-collapse" [ngClass]="{'show': isExpandNav }">
       <ul class="nav navbar-nav">
         <li routerLinkActive="active" *ngIf="isAuthenticated"><a [routerLink]="['recipes']">Recipes</a></li>
         <li routerLinkActive="active"><a [routerLink]="['shopping-list']">Shopping List</a></li>
